add a very funny joke hehe

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <h1>hi - i'm alaina</h1>
                     <h2>
                         i am a former teacher turned software engineer who loves
-                        funky challenges, whimsical user experiences, and robust
-                        infrastructure (lol - fix this).
+                        funky challenges, whimsical user experiences, and being
+                        the best personality hire i can be.
                     </h2>
                     <p>
                         my path to becoming a software engineer was certainly a
