cute text decoration

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
                     <h1>hi - i'm alaina</h1>
                     <h2>
                         i am a former teacher turned software engineer who loves
-                        funky challenges, whimsical user experiences, and being
-                        the best personality hire i can be.
+                        <span class="funky">funky</span> challenges, 
+                        <span class="whimsy">whimsical</span> user experiences, and being the 
+                        <span class="jokes">best personality hire</span> i can be.
                     </h2>
                     <p>
                         my path to becoming a software engineer was certainly a
@@ -85,7 +86,7 @@
                 </div>
             </section>
         </main>
-        <footer>
+        <footer class="footer">
             <p>© 2023: alaina rogacki</p>
         </footer>
     </body>
