--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
                     <h1>hi - i'm alaina</h1>
                     <h2>
                         i am a former teacher turned software engineer who loves
-                        <span class="funky">funky</span> challenges, 
-                        <span class="whimsy">whimsical</span> user experiences, and being the 
-                        <span class="jokes">best personality hire</span> i can be.
+                        <span class="funky">funky</span> challenges,
+                        <span class="whimsy">whimsical</span> user experiences,
+                        and being the
+                        <span class="jokes">best personality hire</span> i can
+                        be.
                     </h2>
                     <p>
                         my path to becoming a software engineer was certainly a
@@ -82,6 +84,12 @@
                         scrolling through tiktok, obsessing over my perfect cat,
                         and trying to convince my fiancé to learn how to play
                         pickleball.
+                    </p>
+
+                    <p>
+                        <a href="https://www.linkedin.com/in/alainarogacki/"
+                            >linkedin</a
+                        >
                     </p>
                 </div>
             </section>
