--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="styles/styles.css" />
 
         <title>hello - it's alaina</title>
+        <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     </head>
     <body>
         <main>
@@ -80,7 +81,7 @@
                         college to teach and have stayed in the mitten ever
                         since. my fiancé and i are now building our dream house
                         in ann arbor (go blue, etc. etc.). if i'm not building
-                        stuff and things, i am collecting another cookbook,
+                        <a id="easter-egg" href="https://www.youtube.com/watch?v=YQwrE-WO1Js&t=23s">stuff and things,</a> i am collecting another cookbook,
                         scrolling through tiktok, obsessing over my perfect cat,
                         and trying to convince my fiancé to learn how to play
                         pickleball.
