what even happened here
love u mean it

--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
                         and now i build internal tools to help technical support
                         work through very challenging problems.
                     </p>
-
                     <p>
                         reflecting on my time in my classroom with my 12th
                         graders, i will be honest, i was not the world's best
@@ -71,7 +70,6 @@
                         to foster the most welcoming culture i can to make sure
                         everyone feels comfortable and that they belong.
                     </p>
-
                     <p>
                         i am originally from toledo, ohio. i know, i know, ohio
                         is the butt of a lot of jokes, but give me five minutes
@@ -85,11 +83,8 @@
                         and trying to convince my fiancé to learn how to play
                         pickleball.
                     </p>
-
                     <p>
-                        <a href="https://www.linkedin.com/in/alainarogacki/"
-                            >linkedin</a
-                        >
+                        <a href="https://www.linkedin.com/in/alainarogacki/">linkedin</a>
                     </p>
                 </div>
             </section>
