--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <span class="whimsy">whimsical</span> user experiences,
                         and being the
                         <span class="jokes">best personality hire</span> i can
-                        be.
+                        be (jokes, jokes).
                     </h2>
                     <p>
                         my path to becoming a software engineer was certainly a
