--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <span class="funky">funky</span> challenges,
                         <span class="whimsy">whimsical</span> user experiences,
                         and being the
-                        <span class="jokes">best personality hire</span> i can
+                        <span class="jokes">best slack-moji reactor</span> i can
                         be (jokes, jokes).
                     </h2>
                     <p>
