--- a/index.html
+++ b/index.html
@@ -26,29 +26,11 @@
                         <span class="jokes">best slack-moji reactor</span> i can
                         be (jokes, jokes).
                     </h2>
+                    <h3>
+                        my path here
+                    </h3>
                     <p>
-                        my path to becoming a software engineer was certainly a
-                        bumpy one. starting off as an english teacher, i quickly
-                        realized the classroom wasn't for me (i would not have
-                        liked the current alaina, who loves all lower case, but
-                        we live and we learn). i learned so, so,
-                        <em>so</em> much, but more on that in a bit. after
-                        leaving the classroom, i became a loan processor. the
-                        company i was with created a technology bootcamp of
-                        sorts that i was a part of, and the rest is history.
-                    </p>
-                    <p>
-                        i started off in the fin-tech world, but was focused on
-                        building internal tools for our engineering teams,
-                        allowing them to build and ship code safely and quickly.
-                        then, i transitioned into the wonderful world of email
-                        marketing, where i am still at today. i started out
-                        working on projects that helped users onboard onto a
-                        very robust platform, transitioned into a growth team
-                        focused on experiments throughout the entire platform to
-                        expand understanding in the platform and reduce churn,
-                        and now i build internal tools to help technical support
-                        work through very challenging problems.
+                        my career hasn’t been linear (and i kind of like it that way). i started off teaching high school english in detroit, where i learned how much i love learning and how important it is to help others grow. from there, i moved into financial services as a loan processor, handling the process with the kind of precision i didn’t know i had. that role gave me my first taste of the tech world through an internal bootcamp and i never looked back. as a software engineer, i’ve built tools, dashboards, and reporting systems that turn messy, complicated data into something clear and useful. i like figuring out how systems work, spotting patterns, and finding better, faster, and simpler ways to get things done.
                     </p>
                     <p>
                         reflecting on my time in my classroom with my 12th
@@ -70,18 +52,25 @@
                         to foster the most welcoming culture i can to make sure
                         everyone feels comfortable and that they belong.
                     </p>
+                    <h3>where i'm headed</h3>
+                    <p>
+                        my dream has always been to work in professional sports. more than the wins and losses, it’s about what sports do for a city — the way they bring people together, create pride, and give people something bigger than themselves to believe in. i’ve seen that especially with detroit. the lions aren’t just a team here; they’re a symbol of grit and resilience.
+                    </p>
+                    <p>
+                        i want to be part of that world, not just as a fan in the stands but as someone contributing behind the scenes. for me, it’s about finding a career where i can combine what i’m good at — problem-solving, learning fast, keeping things running smoothly — with something i love. i want my work to matter to the community around me, and i can’t think of a better way than through sports. and as more women step into roles across professional sports, i want to be part of that movement — opening doors, challenging assumptions, and helping make the industry more inclusive for the next generation.
+                    </p>
+                    <h3>outside of work</h3>
                     <p>
                         i am originally from toledo, ohio. i know, i know, ohio
                         is the butt of a lot of jokes, but give me five minutes
                         to talk to you about cincinnati (go bearcats!) and i
                         think i'll change your mind. i moved to detroit after
                         college to teach and have stayed in the mitten ever
-                        since. my fiancé and i are now building our dream house
+                        since. my fiancé and i built our dream house
                         in ann arbor (go blue, etc. etc.). if i'm not building
                         stuff and things, i am collecting another cookbook,
-                        scrolling through tiktok, obsessing over my perfect cat,
-                        and trying to convince my fiancé to learn how to play
-                        pickleball.
+                        scrolling through tiktok, at a Lions game,obsessing over my perfect cat,
+                        and trying to convince my fiancé to play catch with me.
                     </p>
                     <p>
                         <a href="https://www.linkedin.com/in/alainarogacki/">linkedin</a>
@@ -90,7 +79,7 @@
             </section>
         </main>
         <footer class="footer">
-            <p>© 2024: alaina rogacki</p>
+            <p>© 2025: alaina rogacki</p>
         </footer>
     </body>
 </html>
