--- a/index.html
+++ b/index.html
@@ -29,49 +29,33 @@
                     <h3>
                         my path here
                     </h3>
-                    <p>
-                        my career hasn’t been linear (and i kind of like it that way). i started off teaching high school english in detroit, where i learned how much i love learning and how important it is to help others grow. from there, i moved into financial services as a loan processor, handling the process with the kind of precision i didn’t know i had. that role gave me my first taste of the tech world through an internal bootcamp and i never looked back. as a software engineer, i’ve built tools, dashboards, and reporting systems that turn messy, complicated data into something clear and useful. i like figuring out how systems work, spotting patterns, and finding better, faster, and simpler ways to get things done.
-                    </p>
-                    <p>
-                        reflecting on my time in my classroom with my 12th
-                        graders, i will be honest, i was not the world's best
-                        teacher, no matter what my coffee mug tells you. but the
-                        one thing i did very well was foster relationships with
-                        my students and guide them through the next step in
-                        their lives after high school. talking with my students
-                        and learning about their hopes and dreams and goals and
-                        wishes was the best part of any day. now, as an
-                        engineer, i use that skill and mentor as many people as
-                        i can, especially those who are transitioning into
-                        technology in a non-traditional way. diversity, equity,
-                        inclusion, and belonging is also a passion of mine. as
-                        someone who doesn't always look like what one would
-                        picture when thinking "engineer," i care so incredibly
-                        much about building diverse teams with even more diverse
-                        voices, fighting for equity in the workplace, and trying
-                        to foster the most welcoming culture i can to make sure
-                        everyone feels comfortable and that they belong.
-                    </p>
-                    <h3>where i'm headed</h3>
-                    <p>
-                        my dream has always been to work in professional sports. more than the wins and losses, it’s about what sports do for a city — the way they bring people together, create pride, and give people something bigger than themselves to believe in. i’ve seen that especially with detroit. the lions aren’t just a team here; they’re a symbol of grit and resilience.
-                    </p>
-                    <p>
-                        i want to be part of that world, not just as a fan in the stands but as someone contributing behind the scenes. for me, it’s about finding a career where i can combine what i’m good at — problem-solving, learning fast, keeping things running smoothly — with something i love. i want my work to matter to the community around me, and i can’t think of a better way than through sports. and as more women step into roles across professional sports, i want to be part of that movement — opening doors, challenging assumptions, and helping make the industry more inclusive for the next generation.
-                    </p>
-                    <h3>outside of work</h3>
-                    <p>
-                        i am originally from toledo, ohio. i know, i know, ohio
-                        is the butt of a lot of jokes, but give me five minutes
-                        to talk to you about cincinnati (go bearcats!) and i
-                        think i'll change your mind. i moved to detroit after
-                        college to teach and have stayed in the mitten ever
-                        since. my fiancé and i built our dream house
-                        in ann arbor (go blue, etc. etc.). if i'm not building
-                        stuff and things, i am collecting another cookbook,
-                        scrolling through tiktok, at a Lions game,obsessing over my perfect cat,
-                        and trying to convince my fiancé to play catch with me.
-                    </p>
+                    1990s–early 2000s:
+grows up in toledo, ohio. develops personality despite this.
+
+college:
+discovers writing, rowing, and the invigorating feeling of academic deadlines whooshing by.
+
+post-grad:
+moves to detroit to teach high school english. learns how to lead classrooms, navigate teenage emotions, and hype students up for college apps.
+
+after teaching:
+dips into financial services. accidentally discovers she loves tech via an internal bootcamp. becomes a software engineer.
+
+software engineer era:
+builds dashboards, systems, tools. becomes Very Good At Troubleshooting. burns out spectacularly. decides to breathe, reset, and rethink everything.
+
+the break:
+reconnects with creativity, mentoring, sports, and community. starts feeling like herself again.
+
+2024–2025:
+applies to grad school. gets in. cries happy tears. begins the pivot toward professional sports.
+
+now:
+balancing grad school, lions fandom, and the thrilling art of figuring out the next dream job in sports operations.
+
+future:
+nfl or collegiate athletic department — operations, communications, administration, or something equally behind-the-scenes and powerful.
+also: petting her cat.
                     <p>
                         <a href="https://www.linkedin.com/in/alainarogacki/">linkedin</a>
                     </p>
