--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </head>
     <body>
         <main>
+            <main>
             <section>
                 <div class="bio">
                     <h1>hi - i'm alaina</h1>
@@ -26,36 +27,58 @@
                         <span class="jokes">best slack-moji reactor</span> i can
                         be (jokes, jokes).
                     </h2>
-                    <h3>
-                        my path here
-                    </h3>
-                    1990s–early 2000s:
-grows up in toledo, ohio. develops personality despite this.
 
-college:
-discovers writing, rowing, and the invigorating feeling of academic deadlines whooshing by.
+                    <h3>my path here</h3>
 
-post-grad:
-moves to detroit to teach high school english. learns how to lead classrooms, navigate teenage emotions, and hype students up for college apps.
+                    <section class="timeline-section">
+                        <div class="timeline">
+                            <div class="timeline-item">
+                                <h4>1990s–early 2000s</h4>
+                                <p>grows up in toledo, ohio. develops personality despite this.</p>
+                            </div>
 
-after teaching:
-dips into financial services. accidentally discovers she loves tech via an internal bootcamp. becomes a software engineer.
+                            <div class="timeline-item">
+                                <h4>college</h4>
+                                <p>discovers writing, rowing, and the invigorating feeling of academic deadlines whooshing by. falls in love with football.</p>
+                            </div>
 
-software engineer era:
-builds dashboards, systems, tools. becomes Very Good At Troubleshooting. burns out spectacularly. decides to breathe, reset, and rethink everything.
+                            <div class="timeline-item">
+                                <h4>post-grad</h4>
+                                <p>moves to detroit to teach high school english and yearbook. learns how to lead classrooms, navigate teenage emotions, and hype students up for college apps.</p>
+                            </div>
 
-the break:
-reconnects with creativity, mentoring, sports, and community. starts feeling like herself again.
+                            <div class="timeline-item">
+                                <h4>after teaching</h4>
+                                <p>dips into financial services. stumbles into software engineering.</p>
+                            </div>
 
-2024–2025:
-applies to grad school. gets in. cries happy tears. begins the pivot toward professional sports.
+                            <div class="timeline-item">
+                                <h4>software engineer era</h4>
+                                <p>builds dashboards, systems, tools. becomes very good at troubleshooting. and mentoring burns out spectacularly. decides to breathe, reset, and rethink everything.</p>
+                            </div>
 
-now:
-balancing grad school, lions fandom, and the thrilling art of figuring out the next dream job in sports operations.
+                            <div class="timeline-item">
+                                <h4>the break</h4>
+                                <p>reconnects with creativity, mentoring, sports, and community. starts feeling like herself again.</p>
+                            </div>
 
-future:
-nfl or collegiate athletic department — operations, communications, administration, or something equally behind-the-scenes and powerful.
-also: petting her cat.
+                            <div class="timeline-item">
+                                <h4>october 2025</h4>
+                                <p>applies to grad school. gets in. cries happy tears. begins the pivot toward sports administration.</p>
+                            </div>
+
+                            <div class="timeline-item">
+                                <h4>now</h4>
+                                <p>balancing grad school, lions fandom, and the thrilling art of figuring out the next dream job in sports operations.</p>
+                            </div>
+
+                            <div class="timeline-item">
+                                <h4>future</h4>
+                                <p>nfl or collegiate athletic department: operations, communications, administration, or something equally behind-the-scenes and powerful. also: petting her cat.</p>
+                            </div>
+                        </div>
+                    </section>
+
                     <p>
                         <a href="https://www.linkedin.com/in/alainarogacki/">linkedin</a>
                     </p>
