--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                             <div class="timeline-item">
                                 <h4>software engineer era</h4>
-                                <p>builds dashboards, systems, tools. becomes very good at troubleshooting. and mentoring burns out spectacularly. decides to breathe, reset, and rethink everything.</p>
+                                <p>builds dashboards, systems, tools. becomes very good at troubleshooting. and mentoring. burns out spectacularly. decides to breathe, reset, and rethink everything.</p>
                             </div>
 
                             <div class="timeline-item">
